<resources>
    <string name="app_name">UNSW Tutorial Helper</string>
    <string name="title_activity_login">Sign in</string>
    <string name="activity_registration">Account Registration</string>
    <string name="activity_login">Account Login</string>
    <string name="activity_home">Welcome</string>
    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>

    <!-- texts -->
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="Account_Type">
        <item>Student</item>
        <item>Tutor</item>
    </string-array>
    <string name ="Select_type">Select Type</string>
    <string name="Event_name">Event Name</string>
    <string name="Event_description">Event Description</string>
    <string name="Date_Time">Event Date/Time</string>
    <string name="Tutorial_name">Tutorial Name</string>
    <string name="loading_events">Loading Events...</string>
    <string name="loading_students">Loading Students...</string>
    <string name="user_name">Name </string>
    <string name="user_email">Email </string>
    <string name="user_ZID">ZID</string>
    <string name="delete_item">Deleting Event...</string>
    <string name="save_item">Saving Event...</string>
</resources>
