<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="5"
    android:clickable="true">

    <TextView
        android:text="Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        tools:text="@string/user_name"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="ZID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zid"
        android:textSize="18sp"
        tools:text="@string/user_ZID" />

    <TextView
        android:text="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textSize="18sp"
        tools:text="@string/user_email" />
</LinearLayout>