<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login"
        android:textAppearance="@android:style/TextAppearance.Material.Headline" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorTertiary" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorTertiary" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField" />
    </GridLayout>

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/loginButton"
        android:ems="8"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:background="@android:drawable/btn_default_small"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/register_prompt"
        android:id="@+id/registerPromptText"
        android:textColor="@color/colorPrimary"
        android:paddingTop="@dimen/view_vertical_margin"
        android:paddingBottom="@dimen/view_vertical_margin"
        android:textSize="18sp" />

</LinearLayout>
