<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="96dip"
    android:paddingLeft="@dimen/view_horizontal_margin"
    android:paddingTop="@dimen/view_vertical_margin"
    android:paddingRight="@dimen/view_horizontal_margin"
    android:paddingBottom="@dimen/view_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Event_name"
        android:id="@+id/eventName"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/dateTime"
        android:layout_alignEnd="@+id/dateTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Event_description"
        android:id="@+id/description"
        android:textSize="@dimen/abc_text_size_small_material"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:text="@string/Date_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTime"
        android:layout_below="@+id/eventName"
        android:layout_toRightOf="@+id/tutorialName"
        android:layout_toEndOf="@+id/tutorialName" />

</RelativeLayout>