<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_registration"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_weight="0.04">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameField" />
        <TextView
            android:text="Z_ID"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:layout_row="5"
            android:layout_column="0" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/ZIDConfirmField"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField" />

        <TextView
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password_confirm"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordConfirmField" />
        <TextView
            android:text="AccountType"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner1"
            android:entries="@array/Account_Type"
            android:prompt="@string/Select_type"
            android:spinnerMode="dropdown" />


    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:ems="8"
        android:id="@+id/registerButton"
        android:singleLine="false"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold"
        android:textSize="14sp" />

</LinearLayout>
